# csnf

./: .gitignore  CONTRIBUTING.md  Canonical_Data_Model.md  PULL_REQUEST_TEMPLATE.md  README.md  SteeringCommittee  SteeringCommittee.md  package-lock.json  setup_notes.md
.github/workflows/: main.yml  ta_build.yml
alerts/: aws-alert.json  azure-alert.json  google-alert.json
birthday-cake/: NOTES.md  README.md  TODO.md  demo-service.yaml  glueware.md
birthday-cake/drawio/: csnf-bday-demo.drawio
birthday-cake/manifests/: demo.yaml  sockeye.yaml  sqs-azsb-csnf-splunk-sentinel.yaml  sqssrc.yaml
birthday-cake/samples/: gcp-scc-test2.json
build_tools/: validate_splunk_app.py
community/: decorator.json
csnf/: .eslintrc.yaml  index.js  package-lock.json  package.json  tsconfig.json
csp/: ibm-alert.json  orcl-alert.json
decorators/: common.json
demo-service/: .gitignore  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
demos/: README.md
mappings/: .provider.csv.swp  provider.csv  schema.yml
prereq_page/: README.md  package.json
ta-csnf/: README.md  app.manifest
ta-csnf-build/: README.md  package.json
tools/: README.md
tools/provider_csv_to_provider_json_script/: README.md  aws_guardduty_csnf_output.json  output.conf  output.json  props.conf  provider-csv-to-provider-json.py  provider_csv_to_provider_json.py  pyproject.toml  requirements.txt
tools/provider_csv_to_provider_json_script/test/resources/: aws_guardduty_input.csv  sample_provider_output.json
(+132 files in other folders)
